Style updates, still has overlapping issues with panomarker and very hacky looking

--- a/public/javascripts/SVValidate/css/svv-panorama-single.css
+++ b/public/javascripts/SVValidate/css/svv-panorama-single.css
@@ -68,7 +68,7 @@
     border-radius: 5px;
     border: white solid 2px;
     font-size: 12px;
-    word-break: break-all;
+    /* word-break: break-all; */
     z-index: 1;
 }
 
